motion/static/theme/style.css
/* ... */
#user-compose-friends {
    background: #dceddc url(images/compose-bg.png) repeat-x 0 top;
    position: relative;
    -moz-border-radius-topleft: 8px;
    -moz-border-radius-topright: 8px;
    -webkit-border-top-right-radius: 8px;
    -webkit-border-top-left-radius: 8px;
/*    padding: 10px 20px 10px 20px;*/
}
#user-compose-friends-inner {
    margin-top: 10px;
    border: 5px solid #fff;
    background-color: #fff;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    margin-bottom: 25px;
}
.group-events #user-compose-friends-inner {
    margin-bottom: 10px;
}
#user-username {
    font-size: large;
    line-height: 1.5em;
}
#user-compose-friends .widget-following h3,
#user-compose-friends .widget-followers h3 {
    display: none;
}
#beta .widget-following label,
#beta .widget-followers label {
    display: none;
}
.widget-following, .widget-followers {
    border-top: 1px dotted #777;
    margin-top: 10px;
    padding-top: 5px;
}
#user-compose-friends .widget-following ul,
#user-compose-friends .widget-followers ul {
    padding-top: 7px;
}
#user-compose-friends .widget-following .more,
#user-compose-friends .widget-followers .more {
    padding-top: 7px;
    font-size: 12px;
    float: right;
}
#friends .summary label {
    font-size: 1.1em;
    color: #777;
}
#friends .summary .count {
    color: #069;
    font-size: 2em;
}
#friends .summary {
    width: 65px;
    float: left;
}
#user-counts {
    color: #555;
}
#compose {
    margin-right: 25px;
    float: left;
}
#compose .form-error {
    color: #b00;
    clear: both;
}
#compose-prompt {
    margin: 5px 10px;
    font-size: 1.5em;
    text-align: left;
    position: absolute;
}
#compose label {
    color: #000;
    clear: both;
    margin: 2px 0;
}
#compose-inner {
    background-color: #f6f6f2;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    padding: 5px;
    text-align: center;
}
#compose h3 {
    font-weight: bold;
    font-style: italic;
    font-size: 14px;
    line-height: 16px;
    background: #D9E8F0 url(images/compose-header-bg.gif) no-repeat 0 0;
    padding: 10px 15px;
    border: none;
    margin: 0 0 10px;
    color: #111;
    border-bottom: 1px solid #C3DBE7;
}
#compose-content {
}
#form-compose {
    position: relative;
}
#compose-userpic {
    border: 1px solid #ccc;
    padding: 3px;
    width: 50px;
    height: 50px;
    background: #fff;
    float: left;
    margin-right: 10px;
    position: relative;
}
#entry-fields {
    text-align: left;
}
#field-file label,
#field-file em {
    display: none;
}
#form-compose .audio #field-file #label-audio,
#form-compose .audio #field-file #hint-audio,
#form-compose .photo #field-file #label-photo,
#form-compose .photo #field-file #hint-photo {
    display: block !important;
}
#friends {
    float: left;
    margin-top: 10px;
    width: 280px;
}
#entry-fields .field {
    margin-bottom: 10px;
    font-size: 13px;
    color: #aaa;
}
#entry-fields-optional {
    display: none;
}
#form-compose .submit-wrapper {
    margin-top: 10px;
}
#form-compose .submit-wrapper input {
    font-size: 13px;
}
#form-compose .more-options,
#form-compose .live-preview {
    float: right;
    display: block;
    font-size: 11px;
    line-height: 22px;
    padding-left: 10px;
    text-decoration: none;
}
#form-compose .ti,
#form-compose .ta {
    font-size: 13px;
    border: 1px solid #888;
    width: 100%;
}
#form-compose .fi {
    width: 100%;
}
#form-compose .ta {
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    -webkit-box-shadow: 0 2px 3px rgba(128,128,128,0.75);
    -moz-box-shadow: 0 2px 3px #777;
}
#form-compose label {
}
#form-compose #field-title input {
    font-size: 20px;
}
#entry-types {
    float: right;
    padding-bottom: 5px;
}
#entry-types li {
    float: left;
}

/* entry type sprites */
#entry-types li a {
    display: block;
    text-decoration: none;
    overflow: hidden;
    text-indent: -9999px;
    width: 32px;
    height: 32px;
    background-image: url(images/post-types.png);
    background-repeat: no-repeat;
    background-position: 0 -65px;
    margin: 6px 1px 0 0;
}
#entry-types li a .hint {
    position: absolute;
    font-size: 11px;
    padding: 3px 0;
    background-image: url(images/post-it-bg.png);
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    background-color: #005a87;
    color: #fff;
    text-indent: 0;
    width: 42px;
    top: 38px;
    margin-left: -5px;
    text-align: center;
    line-height: 1.5em;
    display:none;
}
#entry-types li a .hint .tip {
    background-image: url(images/post-types-tooltip.png);
    height: 3px;
    width: 5px;
    position: absolute;
    top: -3px;
    left: 18px;
}
#entry-types li a:hover .hint {
    display:block;
}

#entry-types #entry-post a { background-position: 0 -65px }
#entry-types .active#entry-post a,
#entry-types .active#entry-post a:hover { background-position: 0 0 }
#entry-types #entry-post a:hover { background-position: 0 -33px }

#entry-types #entry-photo a { background-position: -33px -65px }
#entry-types .active#entry-photo a,
#entry-types .active#entry-photo a:hover { background-position: -33px 0 }
#entry-types #entry-photo a:hover { background-position: -33px -33px }

#entry-types #entry-link a { background-position: -66px -65px }
#entry-types .active#entry-link a,
#entry-types .active#entry-link a:hover { background-position: -66px 0 }
#entry-types #entry-link a:hover { background-position: -66px -33px }

#entry-types #entry-embed a { background-position: -132px -65px }
#entry-types .active#entry-embed a,
#entry-types .active#entry-embed a:hover { background-position: -132px 0 }
#entry-types #entry-embed a:hover { background-position: -132px -33px }

#entry-types #entry-audio a { background-position: -99px -65px }
#entry-types .active#entry-audio a:hover,
#entry-types .active#entry-audio a { background-position: -99px 0 }
#entry-types #entry-audio a:hover { background-position: -99px -33px }
/* ... */

